--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "wetube",
   "version": "1.0.0",
   "scripts": {
-    "dev": "nodemon --exec babel-node src/server.js"
+    "dev": "nodemon --exec babel-node src/init.js"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "connect-mongo": "^5.1.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "pug": "^3.0.2"
   },
