--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "wetube",
   "version": "1.0.0",
   "scripts": {
-    "dev": "nodemon --exec babel-node src/init.js"
+    "dev": "nodemon --exec babel-node src/init.js",
+    "assets": "webpack --config webpack.config.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "express-session": "^1.17.3",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.6.1",
     "pug": "^3.0.2"
   },
@@ -22,6 +24,14 @@
     "@babel/core": "^7.23.6",
     "@babel/node": "^7.22.19",
     "@babel/preset-env": "^7.23.6",
-    "nodemon": "^3.0.2"
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
+    "mini-css-extract-plugin": "^2.7.6",
+    "nodemon": "^3.0.2",
+    "sass": "^1.69.6",
+    "sass-loader": "^13.3.3",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
