--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "wetube",
   "version": "1.0.0",
   "scripts": {
+    "start": "node build/init.js",
+    "build": "npm run build:server && npm run build:assets",
+    "build:server": "babel src -d build",
+    "build:assets": "webpack --mode=production",
     "dev:server": "nodemon",
-    "dev:assets": "webpack"
+    "dev:assets": "webpack --mode=development -w"
   },
   "keywords": [],
   "author": "",
@@ -26,7 +30,8 @@
     "version": "^0.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.6",
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.7",
     "@babel/node": "^7.22.19",
     "@babel/preset-env": "^7.23.6",
     "babel-loader": "^9.1.3",
